==> ARMmbed/mbed-os/targets/TARGET_Freescale/TARGET_MCUXpresso_MCUS/TARGET_MCU_K64F/storage_driver.c <==
#include "Driver_Storage.h"
#include "cmsis_nvic.h"
#include "MK64F12.h"
#define USING_KSDK2 1
#include "device/MK64F12/MK64F12_ftfe.h"
#include "fsl_flash.h"
#include <string.h>
#define tr_debug(...)
#define ALIGN_DOWN(x, a) ((x) & (uint32_t)(-((int32_t)(a))))
#define ALIGN_UP(x, a) (-((int32_t)((uint32_t)(-((int32_t)(x))) & (uint32_t)(-((int32_t)(a))))))
#define BYTES_JOIN_TO_WORD_1_3(x, y) ((((uint32_t)(x)&0xFFU) << 24) | ((uint32_t)(y)&0xFFFFFFU))
#define BYTES_JOIN_TO_WORD_2_2(x, y) ((((uint32_t)(x)&0xFFFFU) << 16) | ((uint32_t)(y)&0xFFFFU))
#define BYTES_JOIN_TO_WORD_3_1(x, y) ((((uint32_t)(x)&0xFFFFFFU) << 8) | ((uint32_t)(y)&0xFFU))
#define BYTES_JOIN_TO_WORD_1_1_2(x, y, z) \
    ((((uint32_t)(x)&0xFFU) << 24) | (((uint32_t)(y)&0xFFU) << 16) | ((uint32_t)(z)&0xFFFFU))
#define BYTES_JOIN_TO_WORD_1_2_1(x, y, z) \
    ((((uint32_t)(x)&0xFFU) << 24) | (((uint32_t)(y)&0xFFFFU) << 8) | ((uint32_t)(z)&0xFFU))
#define BYTES_JOIN_TO_WORD_2_1_1(x, y, z) \
    ((((uint32_t)(x)&0xFFFFU) << 16) | (((uint32_t)(y)&0xFFU) << 8) | ((uint32_t)(z)&0xFFU))
#define BYTES_JOIN_TO_WORD_1_1_1_1(x, y, z, w)                                                      \
    ((((uint32_t)(x)&0xFFU) << 24) | (((uint32_t)(y)&0xFFU) << 16) | (((uint32_t)(z)&0xFFU) << 8) | \
     ((uint32_t)(w)&0xFFU))
#define FTFx FTFA
#define FTFx_BASE FTFA_BASE
#define FTFx_FSTAT_CCIF_MASK FTFA_FSTAT_CCIF_MASK
#define FTFx_FSTAT_RDCOLERR_MASK FTFA_FSTAT_RDCOLERR_MASK
#define FTFx_FSTAT_ACCERR_MASK FTFA_FSTAT_ACCERR_MASK

static int32_t initialize(ARM_Storage_Callback_t callback)
{
    tr_debug("called initialize(%p)", callback);

    struct mtd_k64f_data *context = &mtd_k64f_data;
    memset(context, 0, sizeof(mtd_k64f_data));
    context->currentCommand = ARM_STORAGE_OPERATION_INITIALIZE;

    if (context->initialized) {
        context->commandCompletionCallback = callback;

        return 1; /* synchronous completion. */
    }

    if (controllerCurrentlyBusy()) {
        /* The user cannot initiate any further FTFE commands until notified that the
         * current command has completed.*/
        return (int32_t)ARM_DRIVER_ERROR_BUSY;
    }

    clearErrorStatusBits();

    context->commandCompletionCallback = callback;

    /* Enable the command-completion interrupt. */
#if ASYNC_OPS
    NVIC_SetVector(FTFE_IRQn, (uint32_t)ftfe_ccie_irq_handler);
    NVIC_ClearPendingIRQ(FTFE_IRQn);
    NVIC_EnableIRQ(FTFE_IRQn);
#endif

    context->initialized = true;

    return 1; /* synchronous completion. */
}

static int32_t uninitialize(void)
{
    tr_debug("called uninitialize");

    struct mtd_k64f_data *context = &mtd_k64f_data;
    context->currentCommand = ARM_STORAGE_OPERATION_UNINITIALIZE;

    if (!context->initialized) {
        return ARM_DRIVER_ERROR;
    }

    /* Disable the command-completion interrupt. */
#if ASYNC_OPS
    if (commandCompletionInterruptEnabled()) {
        disbleCommandCompletionInterrupt();
        NVIC_DisableIRQ(FTFE_IRQn);
        NVIC_ClearPendingIRQ(FTFE_IRQn);
    }
#endif

    context->commandCompletionCallback = NULL;
    context->initialized               = false;
    return 1; /* synchronous completion. */
}

static int32_t powerControl(ARM_POWER_STATE state)
{
    tr_debug("called powerControl(%u)", state);

    struct mtd_k64f_data *context = &mtd_k64f_data;
    context->currentCommand = ARM_STORAGE_OPERATION_POWER_CONTROL;

    context->powerState = state;
    return 1; /* signal synchronous completion. */
}

static int32_t readData(uint64_t addr, void *data, uint32_t size)
{
    tr_debug("called ReadData(%lu, %lu)", (uint32_t)addr, size);

    struct mtd_k64f_data *context = &mtd_k64f_data;
    context->currentCommand = ARM_STORAGE_OPERATION_READ_DATA;

    if (!context->initialized) {
        return ARM_DRIVER_ERROR; /* illegal */
    }

    /* Argument validation. */
    if ((data == NULL) || (size == 0)) {
        return ARM_DRIVER_ERROR_PARAMETER; /* illegal */
    }
    if ((getBlock(addr, NULL) != ARM_DRIVER_OK) || (getBlock(addr + size - 1, NULL) != ARM_DRIVER_OK)) {
        return ARM_DRIVER_ERROR_PARAMETER; /* illegal address range */
    }

    context->currentCommand = ARM_STORAGE_OPERATION_READ_DATA;
    memcpy(data, (const void *)(uintptr_t)addr, size);
    return size; /* signal synchronous completion. */
}

static int32_t programData(uint64_t addr, const void *data, uint32_t size)
{
    tr_debug("called ProgramData(%lu, %lu)", (uint32_t)addr, size);

    struct mtd_k64f_data *context = &mtd_k64f_data;
    if (!context->initialized) {
        return (int32_t)ARM_DRIVER_ERROR; /* illegal */
    }

    /* argument validation */
    if ((data == NULL) || (size == 0)) {
        return ARM_DRIVER_ERROR_PARAMETER; /* illegal */
    }
    /* range check */
    if ((getBlock(addr, NULL) != ARM_DRIVER_OK) || (getBlock(addr + size - 1, NULL) != ARM_DRIVER_OK)) {
        return ARM_DRIVER_ERROR_PARAMETER; /* illegal address range */
    }
    /* alignment */
    if (((addr % PROGRAM_UNIT) != 0) || ((size % PROGRAM_UNIT) != 0)) {
        return ARM_DRIVER_ERROR_PARAMETER;
    }
    /* programmability */
    if (checkForEachBlockInRange(addr, size, blockIsProgrammable) != ARM_DRIVER_OK) {
        return ARM_STORAGE_ERROR_NOT_PROGRAMMABLE;
    }

    if (controllerCurrentlyBusy()) {
        /* The user cannot initiate any further FTFE commands until notified that the
         * current command has completed.*/
        return ARM_DRIVER_ERROR_BUSY;
    }

    context->currentCommand                 = ARM_STORAGE_OPERATION_PROGRAM_DATA;
    context->sizeofCurrentOperation         = size;
    context->amountLeftToOperate            = size;
    context->currentOperatingData           = data;
    context->currentOperatingStorageAddress = addr;

    clearErrorStatusBits();
    setupNextProgramData(context);
    return executeCommand(context);
}

static int32_t erase(uint64_t addr, uint32_t size)
{
    tr_debug("called erase(%lu, %lu)", (uint32_t)addr, size);

    struct mtd_k64f_data *context = &mtd_k64f_data;

    if (!context->initialized) {
        return (int32_t)ARM_DRIVER_ERROR; /* illegal */
    }
    /* argument validation */
    if (size == 0) {
        return ARM_DRIVER_ERROR_PARAMETER;
    }
    /* range check */
    if ((getBlock(addr, NULL) != ARM_DRIVER_OK) || (getBlock(addr + size - 1, NULL) != ARM_DRIVER_OK)) {
        return ARM_DRIVER_ERROR_PARAMETER; /* illegal address range */
    }
    /* alignment */
    if (((addr % ERASE_UNIT) != 0) || ((size % ERASE_UNIT) != 0)) {
        return ARM_DRIVER_ERROR_PARAMETER;
    }
    /* erasability */
    if (checkForEachBlockInRange(addr, size, blockIsErasable) != ARM_DRIVER_OK) {
        return ARM_STORAGE_ERROR_NOT_ERASABLE;
    }

    if (controllerCurrentlyBusy()) {
        /* The user cannot initiate any further FTFE commands until notified that the
         * current command has completed.*/
        return (int32_t)ARM_DRIVER_ERROR_BUSY;
    }

    context->currentCommand                 = ARM_STORAGE_OPERATION_ERASE;
    context->currentOperatingStorageAddress = addr;
    context->sizeofCurrentOperation         = size;
    context->amountLeftToOperate            = size;

    clearErrorStatusBits();
    setupNextEraseCheck(context);
    return executeCommand(context);
}

static ARM_STORAGE_STATUS getStatus(void)
{
    struct mtd_k64f_data *context = &mtd_k64f_data;

    ARM_STORAGE_STATUS status = {
        .busy  = 0,
        .error = 0,
    };

    if (!context->initialized) {
        status.error = 1;
        return status;
    }

    if (controllerCurrentlyBusy()) {
        status.busy = 1;
    } else if (failedWithAccessError() || failedWithProtectionError() || failedWithRunTimeError()) {
        status.error = 1;
    }
    return status;
}

int32_t getBlock(uint64_t addr, ARM_STORAGE_BLOCK *blockP)
{
    static const size_t NUM_SEGMENTS = sizeof(blockTable) / sizeof(ARM_STORAGE_BLOCK);

    const ARM_STORAGE_BLOCK *iter = &blockTable[0];
    for (size_t index = 0; index < NUM_SEGMENTS; ++index, ++iter) {
        if ((addr >= iter->addr) && (addr < (iter->addr + iter->size))) {
            if (blockP) {
                memcpy(blockP, iter, sizeof(ARM_STORAGE_BLOCK));
            }
            return ARM_DRIVER_OK;
        }
    }

    if (blockP) {
        blockP->addr = ARM_STORAGE_INVALID_OFFSET;
        blockP->size = 0;
    }
    return ARM_DRIVER_ERROR;
}
